--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "TypeScript token-based DI lib",
   "main": "lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "tsc",
     "prepublish": "NODE_ENV=production tsc --project tsconfig.json"
   },
@@ -12,7 +12,10 @@
   "license": "MIT",
   "devDependencies": {
     "@tsconfig/node16": "^1.0.2",
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.10",
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
   },
   "types": "./lib/index.d.ts",
