--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
-  "extends": "@tsconfig/node16/tsconfig.json",
+  "extends": "@tsconfig/recommended/tsconfig.json",
   "compilerOptions": {
-    "outDir": "./lib",
-    "declaration": true
+    "declaration": true,
+    "target": "ES2018",
   },
   "include": [
     "./src/**.ts"
