--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "prebuild": "rm -rf ./lib",
-    "build": "tsc --project tsconfig.cjs.json && tsc --project tsconfig.esm.json",
+    "build": "./scripts/build.sh",
     "prepublish": "NODE_ENV=production tsc --project tsconfig.json"
   },
   "author": "Taras Kustov <tkusto@gmail.com>",
@@ -19,10 +19,7 @@
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
   },
-  "types": "./lib/index.d.ts",
-  "directories": {
-    "lib": "lib"
-  },
+  "types": "./lib/types/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tkusto/ts-token-di.git"
