--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@tkustov/ts-token-di",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "TypeScript token-based DI lib",
-  "main": "lib/index.js",
+  "main": "./lib/cjs/index.js",
   "scripts": {
     "test": "jest",
     "prebuild": "rm -rf ./lib",
