--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tkustov/ts-token-di",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "TypeScript token-based DI lib",
   "main": "./lib/cjs/index.js",
   "scripts": {
@@ -19,7 +19,7 @@
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
   },
-  "types": "./lib/types/index.d.ts",
+  "types": "./src/index.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tkusto/ts-token-di.git"
