--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "outDir": "./lib/cjs",
     "module": "CommonJS",
+    "moduleResolution": "Node",
+    "esModuleInterop": true,
     "declaration": false
   }
 }
