--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -2,7 +2,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./lib/esm",
-    "module": "ES2015",
+    "module": "ES2020",
+    "moduleResolution": "Node",
     "declaration": false
   }
 }
