--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -15,11 +15,10 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 16
-      - name: install, test and build
+      - name: run tests
         run: |
           npm ci
           npm test
-          npm run build
 
   publish-gpr:
     needs: build
