--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@tkustov/ts-token-di",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "TypeScript token-based DI lib",
   "main": "./lib/cjs/index.js",
   "scripts": {
     "test": "jest",
     "prebuild": "rm -rf ./lib",
     "build": "./scripts/build.sh",
-    "prepublish": "NODE_ENV=production npm run build"
+    "prepublishOnly": "NODE_ENV=production npm run build"
   },
   "author": "Taras Kustov <tkusto@gmail.com>",
   "license": "MIT",
