--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
   },
   "include": [
     "./src/**.ts"
-  ],
+, "src/async/SingletonFactory.ts", "src/async/Container.test.ts"  ],
   "exclude": [
     "./src/**.test.ts"
   ]
