--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -5,5 +5,8 @@
     "module": "ES2020",
     "moduleResolution": "Node",
     "declaration": false
-  }
+  },
+  "exclude": [
+    "./src/**.test.ts"
+  ]
 }
