--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,6 @@
     "target": "ES2018",
   },
   "include": [
-    "./src/**.ts"
-, "src/async/SingletonFactory.ts", "src/async/Container.test.ts"  ],
-  "exclude": [
-    "./src/**.test.ts"
+    "./src"
   ]
 }
